--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-eslint": "^10.1.0",
     "devtron": "^1.4.0",
     "electron-packager": "^15.0.0",
+    "electron-rebuild": "^1.11.0",
     "eslint": "^7.3.1",
     "eslint-plugin-import": "^2.22.0"
   },
